application/ms-a/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-a
  labels:
    app: ms-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-a
  template:
    metadata:
      labels:
        app: ms-a
    spec:
      containers:
      - name: ms-a
        image: tahermarzouk/ms-a
        ports:
        - containerPort: 3000
          name: express-port
