application/ms-a/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-a-service
spec:
  selector:
    app: ms-a
  ports:
  - name: express-port
    protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
